--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: default
 
 <div class="home">
 
-  <h2 class="hero">Hi, I'm Chris Trott. I'm an iOS developer. Learn more <a href="/about">about me</a>, check out my <a href="/portfolio">apps and projects</a>, or read my <a href="/blog">technical writing</a>.</h2>
+  <h2 class="hero">Hi, I'm Chris Trott. I'm an Apple platforms developer. Learn more <a href="/about">about me</a>, check out my <a href="/portfolio">apps and projects</a>, or read my <a href="/blog">technical writing</a>.</h2>
 
   <h2 class="page-heading">Recent Posts</h2>
 
