add tag list to blog

--- a/blog.html
+++ b/blog.html
@@ -21,4 +21,11 @@ permalink: /blog/
     </li>
   {% endfor %}
   </ul>
+
+  <div class="tag-list">
+    <h3>Tags</h3>
+    {% for tag in site.tags %}
+      <a class="tag-link" href="{{ site.baseurl }}/blog/tags/{{ tag[0] }}">{{ tag[0] }}</a>
+    {% endfor %}
+  </div>
 </div>
