Add links to blog and tag RSS

--- a/blog.html
+++ b/blog.html
@@ -22,6 +22,10 @@ permalink: /blog/
   {% endfor %}
   </ul>
 
+  <h4>
+    <a href="{{ site.baseurl }}/feed.xml">Blog RSS Feed</a>
+  </h4>
+
   <div class="tag-list">
     <h3>Tags</h3>
     {% for tag in site.tags %}
